# Mohammed-ADDI-MLOps

./: Dockerfile  Makefile  README.md  app.py  deployment.yaml  docker-compose.yaml  mypy.ini  prometheus.yml  pyproject.toml  run_commands.sh
