[tool.poetry]
name = "Mohammed-ADDI-MLOps"
version = "0.1.0"
description = "It is an exercie for MLOps module using streamlit"
authors = ["Mohammed ADDI <mohammed.addi@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.11.6"
streamlit = "^1.10.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

pytest = "^7.1.1"
vulture = "^2.3"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.971"
[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.0.240218"

